fix: body width with scrollbar

--- a/source/css/random.styl
+++ b/source/css/random.styl
@@ -19,7 +19,6 @@ body
   display: flex;
   justify-content: center;
   align-content: center;
-  width: 100vw;
   height: 100vh;
   @media (max-width: mdDesktopWidth)
     font-size: 16px;
